--- a/css/carousel.css
+++ b/css/carousel.css
@@ -67,6 +67,13 @@
     }
 }
 
+.range .carousel .card img {
+    transition: var(--transition-button);
+    transform: scale(1);
+}
+.range .carousel .card:hover img {
+    transform: scale(1.05);
+}
 
 
 /* ----------------------- */
