--- a/css/search.css
+++ b/css/search.css
@@ -11,7 +11,7 @@
     height: 0;
     background-color: rgba(var(--color-black-rgb), 0.8);
     /* z-index: -1000; */
-    z-index: 99;
+    z-index: 9999;
     overflow: auto;
     /* transform: translate(0,-20%); */
     backdrop-filter: blur(5px);
@@ -24,7 +24,7 @@
     flex-wrap: wrap;
     /* padding: 1rem; */
     box-sizing: border-box;
-    transition: (--transition-slow);
+    transition: var(--transition-slow);
 /*     
     transition: height var(--transition-slow-part), 
                 opacity var(--transition-slow-part); 
@@ -68,16 +68,18 @@
 
 .search-content {
     padding: 1rem;
-    padding-left: calc(var(--logo-width) + (var(--gap-large)*2));
+    padding-top: 0;
+    padding-left: var(--nav-padding);
     margin-left: 1rem;
     box-sizing: border-box;
-    width: 100%;
+    width: calc(100% - var(--nav-padding));
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
     align-content: flex-start;
     flex-wrap: wrap;
+    gap: var(--gap);
 }
 @media screen and (max-width: 1200px) {
     .search-content {
@@ -86,48 +88,151 @@
     }
 }
 
-h2.search-title {
-    font-family: var(--heading-serif);
-    font-size: var(--font-size-menu-title);
-    font-weight: var(--serif-font-weight);
-    letter-spacing: 0;
-    text-transform: capitalize;
-    color: var(--black);
-    padding-bottom: 1rem;
-    padding-right: 3rem;
-    /* padding: 1rem 1rem 1rem 0; */
-    border-bottom: solid 1px black;
+.search-details {}
+
+.search-heading {
+    display: inline-flex;
+    gap: var(--gap);
+    margin-bottom: var(--gap-sm);
 }
-h3.search-subtitle {
+.search-subtitle, 
+.search-clear {
     font-family: var(--heading-font-family);
     font-size: var(--font-size-md);
-    font-weight: var(--med-font-weight);
+    font-weight: var(--base-font-weight);
 }
 
-.search-content .filters {
+.search-clear {
+    cursor: pointer;
+    text-underline-offset: 0.2rem;
+    color: rgba(var(--primary-rgb), 0.6);
+    transition: var(--transition-button);
+}
+
+.search-clear:hover {
+    text-decoration: underline;
+    text-underline-offset: 0.5rem;
+}
+
+
+.form-wrapper p {
+    margin: 0;
+    font-size: 1rem;
+}
+
+
+
+/* ----------------------- */
+/* FILTERS */
+
+.search-content .search-filters {
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: row;
     align-content: center;
     flex-wrap: wrap;
+    margin-bottom: 1rem;
 }
+
+
+.search-filters ul.search-list {
+    margin-left: 0;
+    width: fit-content;
+}
+
+.pre-filter {
+    font-size: var(--font-size-lg);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+    align-content: center;
+    flex-wrap: wrap;
+    /* gap: var(--gap); */
+    position: relative;
+    width: auto;
+    /* padding-right: 1rem; */
+    &:after {
+        content: url(../assets/icons/close-thin.svg);
+        width: 16px;
+        /* height: 16px; */
+        padding: 0.5rem;
+        /* margin: 0.5rem; */
+        position: relative;
+        
+        transform: translateY(0) rotate(0deg);
+        transform-origin: center center;
+        display: inline;
+        transition: var(--transition-button); 
+        opacity: 1;   
+        cursor: pointer;
+    } 
+    &:hover {
+        &::after {
+            transform: translate(-5%, 2% )rotate(180deg) ;
+        }
+    }
+    
+}
+
+/* ----------------------- */
+/* FORM */
+
 
 .search-content form {
     width: 100%;
     display: flex;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
     flex-direction: row;
     align-content: center;
     flex-wrap: no-wrap;
 }
+
+.search-content form input,
+form.search input {
+    font-family: var(--heading-serif);
+    font-size: var(--font-size-menu-title);
+    font-weight: var(--serif-font-weight);
+    line-height: var(--heading-line-height);
+    letter-spacing: 0;
+    text-transform: capitalize;
+    color: var(--primary);
+    padding-bottom: 1rem;
+    padding-right: 3rem;
+    /* padding: 1rem 1rem 1rem 0; */
+    border: none;
+    border-bottom: solid 1px black;
+    min-width: 40vw;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.search-content form input:active {
+    border: none;
+    border-bottom: solid 2px black;
+}
+
+.search-content form input::placeholder {
+    color: var(--primary);
+    font-size: var(--font-size-menu-title);
+    opacity: 1; /* Firefox */
+}
+  
+.search-content form input::-ms-input-placeholder { /* Edge 12 -18 */
+    color: var(--primary);
+}
+
 .search-content form .form_group {
 
 }
 
-#search button {
+.search button {
+    visibility: hidden;
+    opacity: 0;
+    cursor: not-allowed;
+    /*  */
     border-width: 1px;
     font-size: 1rem;
     font-weight: var(--med-font-weight);
@@ -144,31 +249,40 @@ h3.search-subtitle {
     max-width: max-content;
     text-transform: uppercase;
     letter-spacing: var(--letterspacing-button);padding-right: 3rem;
-    &:after {
-        position: absolute;
-        top: 50%;
-        right: 10px;
-        transform: translate(0%, -50%);
-        display: inline;
-        content: url(../assets/icons/search-blk.svg);
-        margin-right: 1rem;
-        transition: var(--transition-button);
-        /*  */
-        & path {
-            fill: var(--primary);
-        }
-    }
+    
     &:hover {
         background-color: var(--primary);
         border: 1px solid var(--primary);
         color: var(--white);
-        &:after {
-            /*  */
-            content: url(../assets/icons/arrow-wht.svg);
-            /* transform: rotate(90deg) translate(-100%, 0%) ; */
-        }
+        
     }
 }
+form.search input:focus, 
+form.search input:active, 
+form.search input:focus-within {
+    outline:none;
+    background: rgba(var(--primary-rgb), 0.05);
+    border-bottom: 2px solid var(--primary);
+}
+form.search input:focus::placeholder {
+    color: rgba(var(--primary-rgb), 0.9);;
+}
+form.search input:-webkit-autofill {
+    background: rgba(var(--primary-rgb), 0.05);
+}
+
+
+/* ----------------------- */
+/* add class with in-focus-js */
+
+button.in-focus {
+    visibility: visible;
+    opacity: 1;
+    cursor: pointer;
+}
+
+/* ----------------------- */
+/* CLOSE */
 
 #search .search-close {
     position: absolute;
@@ -196,9 +310,4 @@ h3.search-subtitle {
 
 .close:hover svg {
     transform: rotate(180deg);
-}
-
-.form-wrapper p {
-    margin: 0;
-    font-size: 1rem;
 }
