--- a/css/variables.css
+++ b/css/variables.css
@@ -21,11 +21,13 @@
     --nav-width: 615px;
     --nav-seconday-width: 100px;
     --hero-height: calc(100vh - var(--header-height));
+    --nav-padding: calc(var(--logo-width) + (var(--gap-large)*2));
 
     /* animation */
     --transition: all 300ms ease-in-out;
     --transition-button: all 250ms ease-in-out;
-    --transition-slow: all 500ms cubic-bezier(0.5, 0, 0.75, 0) 500ms;
+    --transition-slow: all 500ms cubic-bezier(0.5, 0, 0.75, 0);
+    --transition-slow-delay: all 500ms cubic-bezier(0.5, 0, 0.75, 0) 500ms;
     --transition-slow-part:500ms cubic-bezier(0.5, 0, 0.75, 0) 500ms;
     /* image */
     --mix-blend: hard-light;
