--- a/css/buttons.css
+++ b/css/buttons.css
@@ -15,7 +15,9 @@ input[type=submit],
 .button-primary,
 .button-secondary,
 .nav-button,
-.grid-button {
+.grid-button,
+.button-outline,
+.button-rev-outline {
     border-width: 1px;
     font-size: 1rem;
     font-weight: var(--med-font-weight);
@@ -44,7 +46,8 @@ input[type=submit],
     .button-primary,
     .button-secondary,
     .nav-button,
-    .grid-button {
+    .grid-button,
+    .button-rev-outline {
         width: 100%;
         /* max-width: unset; */
     }
@@ -290,6 +293,19 @@ a.search {
         background-color: var(--primary);
         border: 1px solid var(--primary);
         color: var(--white);
+    }
+}
+
+.button-rev-outline {
+    /* background-color: transparent; */
+    background-color: rgba(var(--primary-rgb),0.3);
+    border: 1px solid var(--white);
+    color: var(--white);
+    backdrop-filter: blur(5px);
+    &:hover {
+        background-color: var(--white);
+        border: 1px solid var(--white);
+        color: var(--primary);
     }
 }
 
