--- a/css/typography.css
+++ b/css/typography.css
@@ -7,6 +7,7 @@
     --menu-font-family: 'futura-pt', 'Futura', Arial, sans-serif;
     --footer-font-family: 'futura-pt', 'Futura', Arial, sans-serif;
     --heading-serif: 'Austin', serif;
+    --serif-font-family: 'Austin', serif;
     --blockquote: 'Austin', serif;
 
     --base-line-height: 1.7;
