--- a/css/cards.css
+++ b/css/cards.css
@@ -12,7 +12,7 @@
     width: 100%;
     /* min-width: 300px; */
     /* margin: 3rem auto; */
-    background-color: var(--white);
+    /* background-color: var(--white); */
     box-sizing: border-box;
 }
 .card-center {
