--- a/css/navigation.css
+++ b/css/navigation.css
@@ -340,7 +340,7 @@ nav.desktop ul li a span:hover,
     
 }
 
-h2.submenu-title {
+.desktop h2.submenu-title {
     font-family: var(--heading-serif);
     font-size: var(--font-size-menu-title);
     font-weight: var(--serif-font-weight);
@@ -353,6 +353,14 @@ h2.submenu-title {
     border-bottom: solid 1px black;
     margin-left: 1rem;
     
+}
+.desktop h2.submenu-title a {
+    font-weight: initial;
+    text-decoration: initial;
+}
+.desktop h2.submenu-title:hover {
+    /* border-bottom: solid 1.5px black; */
+    border-bottom-color: rgba(var(--primary-rgb), 0.4);
 }
 
 .dropdown .submenu_col
@@ -523,23 +531,21 @@ nav .wp-block-navigation-submenu ul li a span,
         /* max-width: var(--max-col-width); */
         justify-content: flex-start;
         flex-direction: column;
-        gap: var(--gap);
+        gap: 0;
         
     }
 
     h2.submenu-title {
         font-family: var(--menu-font-family);
         font-size: var(--font-size-menu-title);
-        font-weight: var(--font-weight-menu);
+        font-weight: var(--menu-font-weight);
         letter-spacing: 0;
         text-transform: capitalize;
         color: var(--black);
         padding-bottom: 1rem;
         padding-right: 3rem;
-        /* padding: 1rem 1rem 1rem 0; */
-        border-bottom: solid 1px black;
-        margin-left: 1rem;
-        
+        /* border-bottom: solid 1px black; */
+        margin-left: 1rem; 
     }
 
     .dropdown .submenu_col
@@ -568,18 +574,18 @@ nav .wp-block-navigation-submenu ul li a span,
     .fullscreen .submenu .submenu-item:hover {
         /* #f3f3f3; */
     }
-
+/* 
     .fullscreen .submenu-link {
         font-family: var(--submenu-font-family);
         font-size: var(--font-size-submenu);
-        font-weight: var(--font-weight-submenu);
+        font-weight: var(--submenu-font-weight);
         letter-spacing: 0;
-        /*  */
+        
         color: var(--black);
         text-decoration: none;
         transition: var(--transition);
         position: relative;
-    }
+    } */
 
     /* MOBILE SUBMENU */
 
@@ -606,6 +612,7 @@ nav .wp-block-navigation-submenu ul li a span,
 
     .fullscreen .submenu {
         margin-bottom: 1rem;
+        margin-left: 1.5rem;
     }
 
     .fullscreen .submenu-item {
@@ -625,7 +632,7 @@ nav .wp-block-navigation-submenu ul li a span,
     .fullscreen .submenu-link {
         font-family: var(--submenu-font-family);
         font-size: var(--font-size-submenu);
-        font-weight: var(--font-weight-submenu);
+        font-weight: var(--submenu-font-weight);
         color: var(--primary);
         text-decoration: none;
         transition: var(--transition);
@@ -728,7 +735,7 @@ nav .wp-block-navigation-submenu ul li a span,
         left: 0;
         padding: var(--gap-large);
         width: 100%;
-        max-width: 100vw;
+        max-width: calc(100vw - (var(--gap-large)*2));
         height: calc(100vh - (var(--header-height)/2));
         visibility: hidden;
         opacity: 0;
@@ -851,12 +858,12 @@ footer .menu-link {
 
 @media screen and (max-width: 1080px){
        
-    li.menu-item:has(a) {
+    li li.menu-item:has(a) {
         display: none;
     }
     /* to do: */
     /* -> add .active with JS */
-    li.menu-item:has(a).active {
+    li li.menu-item:has(a).active {
         display: block;
     }
 }
