--- a/css/variables.css
+++ b/css/variables.css
@@ -10,7 +10,7 @@
     --gap-sm: 1rem;
     --gap: 2rem;
     --gap-large: 4rem;
-    --gap-large: calc(70/1920 *100vw);s
+    --gap-large: calc(70/1920 *100vw);
     --gap-xlarge: 6rem;
     --gap-xs: 0.75rem;
 
