update all menu links - desktop and mobile. new professionals and contact pages css & js updates

--- a/css/colours.css
+++ b/css/colours.css
@@ -124,6 +124,7 @@
 }   
 .black_bg {
     background-color: var(--black);
+    color: var(--white);
 }
 .primary_bg {
     background-color: var(--primary);
