--- a/css/search.css
+++ b/css/search.css
@@ -9,7 +9,7 @@
     left: 0;
     width: 100%;
     height: 0;
-    background-color: rgba(var(--color-black-rgb), 0.8);
+    background-color: rgba(var(--primary-rgb), 0.05);
     /* z-index: -1000; */
     z-index: 9999;
     overflow: auto;
@@ -70,7 +70,7 @@
     padding: 1rem;
     padding-top: 0;
     padding-left: var(--nav-padding);
-    margin-left: 1rem;
+    margin-left: 2rem;
     box-sizing: border-box;
     width: calc(100% - var(--nav-padding));
     display: flex;
@@ -200,6 +200,7 @@ form.search input {
     letter-spacing: 0;
     text-transform: capitalize;
     color: var(--primary);
+    padding-left: 0;
     padding-bottom: 1rem;
     padding-right: 3rem;
     /* padding: 1rem 1rem 1rem 0; */
