--- a/css/variables.css
+++ b/css/variables.css
@@ -13,7 +13,7 @@
     --gap-large: calc(70/1920 *100vw);
     --gap-xlarge: 6rem;
     --gap-xs: 0.75rem;
-
+    
     /* sizes */
     --max-width: 100vw;
     --max-col-width: calc(100vw - (var(--gutter) * 2));
@@ -22,7 +22,11 @@
     --nav-width: 615px;
     --nav-seconday-width: 100px;
     --hero-height: calc(100vh - var(--header-height));
-    --nav-padding: calc(var(--logo-width) + (var(--gap-large)*2));
+
+    /*  */
+    --button-padding-h:1rem;
+    --menu-padding-h:1rem;
+    --nav-padding: calc(var(--logo-width) + (var(--gap-large)*2) - var(--menu-padding-h));
 
     /* animation */
     --transition: all 300ms ease-in-out;
