--- a/css/search-results.css
+++ b/css/search-results.css
@@ -5,12 +5,34 @@
     --results-col: 300px;
     --results-col-mw: calc(100vw - var(--results-col) - (var(--gap-xs)* (2)));
     --results-cards-mw: calc(((100vw - var(--results-col)) - (var(--gap) * (3/2))) / 3);
+    --results-horiz-cards-mw: calc(((100vw - var(--results-col)) - (var(--gap) * (2))) / 2);
+    --results-horiz-img-mw: calc(((100vw - var(--results-col)) - (var(--gap) * (3))) / 4);
+}
+@media screen and (max-width: 1200px) {
+    :root {
+        /* --results-col: 200px; */
+        --results-col-mw: calc(100vw - var(--results-col) - (var(--gap-xs) * (1)));
+        --results-cards-mw: calc(((100vw - var(--results-col)) - (var(--gap-xs) * (1))));
+        --results-horiz-cards-mw: 90vw;
+        --results-horiz-img-mw: calc(((100vw - var(--results-col)) - (var(--gap) * (2))) / 3);
+
+    }    
 }
 @media screen and (max-width: 1080px) {
     :root {
         /* --results-col: 200px; */
-        --results-col-mw: calc(100vw - var(--results-col) - (var(--gap-xs)* (3/2)));
-        --results-cards-mw: calc(((100vw - var(--results-col)) - (var(--gap) * (1))) / 2);
+        --results-col-mw: calc(100vw - var(--results-col) - (var(--gap-xs) * (1)));
+        --results-cards-mw: calc(((100vw - var(--results-col)) - (var(--gap-xs) * (1/3))));
+        --results-horiz-cards-mw: 90vw;
+    }    
+}
+
+@media screen and (max-width: 880px) {
+    :root {
+        /* --results-col: 200px; */
+        --results-col-mw: calc(100vw - (var(--gap-xs) * (1)));
+        --results-cards-mw: calc(((100vw - (var(--gap-xs) * (1/3)))));
+        --results-horiz-cards-mw: 90vw;
     }    
 }
 
@@ -19,6 +41,7 @@
         --results-col: 100%;
         --results-col-mw: 100%;
         --results-cards-mw: 90vw;
+        
     }
     
 }
@@ -37,12 +60,18 @@
     position: absolute;
     left: var(--gap-xs);
 }
+@media screen and (max-width: 880px) {
+    .sidebar {
+        max-width: unset;
+        position: relative;
+    }
+}
 
 .input-wrapper {
     width: 100%;
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     gap: var(--gap-xs);
 }
 
@@ -59,8 +88,15 @@
 .search-results .grid-results {
     padding-left: var(--results-col);
 }
+@media screen and (max-width: 880px) {
+    .search-results .grid-results {
+        padding-left: 0;
+        max-width: calc(100vw - (var(--gap)*2));
+    }
+}
 
-.product-description {
+.product-description,
+.article-description {
     margin-top: 0.5rem;
     font-size: var(--font-size-sm);
     line-height: var(--line-height-sm);
@@ -70,13 +106,13 @@ input.search-icon,
 .search-icon {
     padding: 0.5rem 1rem;
     width: 2rem;
-    height: 2rem;
+    height: 2.5rem;
     border-radius: 8px;
     position: relative;
     margin: 0 !important;
     transition: var(--transition-button);
-    background-color: red;
-    border: none;
+    background-color: rgba(var(--primary-rgb), 0.1);
+    border: 1px solid rgba(var(--primary-rgb), 0.1);
     background-image: url(../assets/icons/search-blk.svg);
     background-size: 1rem 1rem;
     background-repeat: no-repeat;
@@ -85,7 +121,7 @@ input.search-icon,
         /* content: "url(../assets/icons/search-blk.svg)"; */
         width: 16px;
         /* height: 16px; */
-        padding: 0.5rem;
+        /* padding: 0.5rem; */
         /* margin: 0.5rem; */
         position: relative;
         transform: translateY(0) rotate(0deg);
@@ -99,6 +135,8 @@ input.search-icon,
     &:hover {
         /* background-color: var(--gray-100); */
         background-color: rgba(var(--primary-rgb), 0.1);
+        border: 1px solid rgba(var(--primary-rgb), 0.0);
+        
         transform: none;
         &:after {
             /*  */
@@ -129,5 +167,225 @@ input[class*="-icon"] {
 }
 
 .refine-search input[type="submit"] {
+    margin-top: 1rem;
+}
+
+@media screen and (max-width: 880px) {
+
+    #refine [class*="filter"] div {
+        visibility: hidden;
+        height: 0;
+    }
+}
+
+/* --------------------------------- */
+/* SEARCH RESULTS */
+.grid-results {
+    max-width: calc(var(--results-col-mw) + var(--results-col));
+    min-height: 825px;
+}
+@media screen and (max-width: 880px) {
+    .grid-results {
+        min-height:unset;
+    }
+    
+}
+.grid-results .row {
+    max-width: 100%;
+    max-width: var(--results-col-mw);
+}
+@media screen and (max-width: 880px) {
+    .grid-results .row {
+        max-width: 100%;
+    }
+}
+
+.grid-results .column {
+    gap: var(--gap);
+    max-width: 100%;
+    max-width: var(--results-col-mw);
+}
+
+.grid-results .grid-col.column,
+.grid-results .grid-col-horiz.column {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.grid-results .grid-col.column{
+    gap: var(--gap) var(--gap-xs);
+}
+
+.grid-results .grid-col-horiz.column {
+    gap: var(--gap);
+}
+
+@media screen and (max-width: 1200px) {
+    .grid-results .grid-col.column,
+    .grid-results .grid-col-horiz.column {
+        gap: var(--gap);
+        width: 100%;
+        max-width: unset;
+    }
+}
+
+
+
+.grid-results .card {
+    width: 100%;
+    /* max-width: calc(var(--one-third-max-width-smgap)); */
+    /* max-width: calc(((100vw - var(--results-col)) - (var(--gap) * (3/2))) / 3); */
+    max-width: var(--results-cards-mw);
+    overflow: hidden;
+}
+
+.grid-col-horiz .card {
+    flex-direction: row;
+    gap: var(--gap-xs);
+    max-width: var(--results-horiz-cards-mw);
+}
+
+.grid-results a:hover .card-img  {
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+.grid-results .card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    display: block;
+    transform: scale(1);
+    transform-origin: center;
+    transition: var(--transition);
+    aspect-ratio: 3 / 2;
+    /* A4 */
+}
+.grid-col-horiz .card-image,
+.grid-col-horiz .card img {
+    width: 100%;
+    /* aspect-ratio: 1 / 1; */
+    max-width: calc(var(--results-horiz-img-mw))
+}
+@media screen and (max-width: 1080px){
+    .grid-col-horiz .card-image,
+    .grid-col-horiz .card img {
+        /* max-width: 35vw; */
+    }
+}
+@media screen and (max-width: 880px){
+    .grid-col-horiz .card-image,
+    .grid-col-horiz .card img {
+        /* width: 35vw; */
+        max-width: 35vw;
+    }
+}
+
+.grid-results .card:hover img,
+.grid-results a:hover .card img {
+    transform: scale(1.05);
+    transform-origin: center;
+    transition: var(--transition);
+}
+
+@media screen and (max-width: 1080px){
+    .grid-results .card, 
+    .grid-results .card img {
+        /* max-width: var(--results-cards-mw); */
+        /* max-width: calc(var(--results-horiz-img-mw)) */
+    }
+}
+@media screen and (max-width: 880px){
+    .grid-results .card, 
+    .grid-results .card img {
+        max-width: var(--results-cards-mw);
+        max-width: unset ;
+    }
+}
+
+.grid-results .card-content {
+    padding: var(--gap-sm) 0;
+}
+
+.grid-col-horiz .card-content {
+    align-items: flex-start;
+    padding: 0;
+    /* padding-top: var(--gap-sm); */
+}
+
+.grid-results h3 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    margin-bottom: 0;
+    font-family: var(--base-font-family);
+    font-size: var(--font-size-grid-title);
+    font-weight: var(--base-font-weight);
+    -webkit-font-smoothing: auto;
+    -moz-osx-font-smoothing: auto;
+}
+
+.grid-results.archive h3 {
+    font-family: var(--heading-serif);
+    font-size: var(--font-size-h3);
+    font-weight: var(--serif-font-weight);
+    -webkit-font-smoothing: auto;
+    -moz-osx-font-smoothing: auto;
+}
+
+.grid-results p {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+}
+
+/* filter tabs */
+
+.search-results-tab-wrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: var(--gap);
+    margin-top: var(--gap);
+}
+
+.search-results-tab-item {
+    font-weight: var(--base-font-weight) !important;
+    font-size: var(--font-size-sm-link);
+    padding: 0;
+    border: none;
+    background: none;
+    color: var(--primary);
+    font-weight: 500;
+    text-decoration: none;
+    text-transform: unset;
+    letter-spacing: unset;
+    cursor: pointer;
+    margin-top: 0.5rem;
+    text-underline-offset: 3px;
+    position: relative;
+    transform: var(--transition-button);
+    
+    &:hover {
+        color: var(--primary);
+        text-decoration: underline;
+        text-underline-offset: 5px;
+        text-decoration-color: var(--tertiary);
+        
+    }
+    &.active {
+        color: var(--primary);
+        text-decoration: underline;
+        text-underline-offset: 5px;
+        text-decoration-color: var(--tertiary);
+    }
+}
+a.search-results-tab-item,
+button.search-results-tab-item {
     margin-top: 1rem;
 }
