--- a/css/typography.css
+++ b/css/typography.css
@@ -246,7 +246,13 @@ h4, h5, h6 {
     margin: 0 0 0.5rem 0;
 }
 
-
+sup {
+    vertical-align: super;
+    font-size: x-small;
+}
+blockquote sup {
+    font-size: smaller;
+}
 
 .site-title h1 {
     margin-bottom: 0;
