--- a/css/navigation.css
+++ b/css/navigation.css
@@ -764,8 +764,8 @@ nav .wp-block-navigation-submenu ul li a span,
         flex-direction: column;
         /* visibility: hidden; */
         position: absolute;
-        top: calc(var(--header-height) );
-        top: calc(42px );
+        /* top: calc(var(--header-height) ); */
+        top: 56px;
         left: 0;
         padding: var(--gap-large);
         width: 100%;
