--- a/css/typography.css
+++ b/css/typography.css
@@ -53,6 +53,8 @@
     --font-size-huge-sub: 50px;
     --font-size-blockquote: 60px;
     --font-size-blockquote: clamp(2rem, 0.893rem + 2.381vw, 3.5rem);
+    --font-size-blockquote: 48px;
+    --font-size-blockquote: clamp(2rem, 0.7143rem + 1.9048vw, 3rem);
     --font-size-h2: 80px;
     /* --font-size-h2: clamp(3.8rem, 3.56rem + 1.2vw, 5rem); */
     --font-size-h2: clamp(4rem, 2.714rem + 1.905vw, 5rem);
@@ -76,6 +78,8 @@
     --font-size-caption: 12px;
     --font-size-form: 16px;
     --font-size-footer: 12px;
+    --font-size-footer: 14px;
+    --font-size-footer-p: 16px;
     --font-size-button: 30px;
     --font-size-sm-link: 0.875rem;
     /*  */
